apps/base/miasma/resources/middleware.yaml
# yamllint disable rule:line-length
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: miasma
spec:
  headers:
    customResponseHeaders:
      Content-Security-Policy: default-src 'none'; img-src 'self'; manifest-src 'self'; style-src 'self' 'unsafe-inline'
      Permissions-Policy: geolocation=(), interest-cohort=(), microphone=(), camera=()
      Referrer-Policy: strict-origin-when-cross-origin
      Server: ""
      Strict-Transport-Security: max-age=31536000; includeSubDomains
      X-Content-Type-Options: nosniff
      X-Frame-Options: DENY
      X-Robots-Tag: noindex, nofollow
      X-XSS-Protection: 1; mode=block
