apps/base/miasma/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: miasma
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma
  name: miasma
  namespace: miasma
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: miasma
      app.kubernetes.io/instance: miasma
      app.kubernetes.io/name: miasma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: miasma
        app.kubernetes.io/instance: miasma
        app.kubernetes.io/name: miasma
    spec:
      containers:
        - args:
            - --link-prefix=/miasma
            - --max-depth=8
          image: ghcr.io/nosborn/miasma:0.2.1
          imagePullPolicy: Always
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          name: miasma
          ports:
            - containerPort: 9999
              name: http
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          resources: {} # TODO
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma-nginx
  name: nginx
  namespace: miasma
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: nginx
      app.kubernetes.io/instance: miasma
      app.kubernetes.io/name: miasma-nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: nginx
      labels:
        app.kubernetes.io/component: nginx
        app.kubernetes.io/instance: miasma
        app.kubernetes.io/name: miasma-nginx
    spec:
      containers:
        - image: nginx:1.31.0-alpine-otel
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nginx
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 1m
              memory: 11Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: config
              subPath: nginx.conf
            - mountPath: /tmp
              name: temp
            - mountPath: /usr/share/nginx/html
              name: html
              readOnly: true
            - mountPath: /var/cache/nginx
              name: cache
      imagePullSecrets:
        - name: dockerconfig
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - emptyDir: {}
          name: cache
        - configMap:
            name: miasma-nginx
          name: config
        - emptyDir:
            medium: Memory
          name: html
        - configMap:
            defaultMode: 493 # 0755
            name: miasma-nginx-scripts
          name: scripts
        - emptyDir:
            medium: Memory
            sizeLimit: 1Mi
          name: temp
