apps/base/miasma/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma
  name: miasma
  namespace: miasma
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma-nginx
  name: miasma-nginx
  namespace: miasma
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma-nginx
  type: ClusterIP
