apps/base/miasma/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma
  name: miasma-nginx
  namespace: miasma
spec:
  hostnames:
    - miasma.example.com
  parentRefs:
    - name: phobos-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: miasma-nginx
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-cert
  namespace: miasma
spec:
  from:
    - group: ""
      kind: Gateway
      namespace: traefik
  to:
    - group: ""
      kind: Secret
      name: miasma-tls
