apps/base/miasma/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma
  name: miasma-nginx
  namespace: miasma
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`miasma.example.com`)
      middlewares:
        - name: security-headers
      services:
        - name: miasma-nginx
          port: 80
  tls:
    secretName: miasma-tls
