apps/base/miasma/resources/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma
  name: miasma
  namespace: miasma
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: miasma
  podSelector:
    matchLabels:
      app.kubernetes.io/name: miasma
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma-acme-solver
  name: miasma-acme-solver
  namespace: miasma
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: !!str true
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: miasma
    app.kubernetes.io/name: miasma-nginx
  name: miasma-nginx
  namespace: miasma
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
  podSelector:
    matchLabels:
      app.kubernetes.io/name: miasma-nginx
  policyTypes:
    - Ingress
